--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>v3</title>
-  </head>
+    <title>Professional Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script
+            src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+            defer></script>
+</head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
